--- a/src/Components/Button2.css
+++ b/src/Components/Button2.css
@@ -3,13 +3,22 @@
 }
 .btn2{
     position: relative;
+    font-weight: 700;
     color:#000;
     cursor: pointer;
     width: 10rem;
     height: 3rem;
-    background:none ;
-    border: 1px black solid;
-    border-radius:  12px;
+    background: rgba(237, 3, 3, 0.2);
+    border: none;
+    
    text-transform:uppercase;
+   transition: all .5s ease-in-out;
    
+}
+.btn2:hover{
+    border-top: 1px solid red;
+    border-bottom: 1px solid red;
+    width: 12rem;
+    letter-spacing: .2rem;
+    background: none;
 }
