--- a/src/Components/Button3.css
+++ b/src/Components/Button3.css
@@ -2,6 +2,46 @@
     margin: 20px;
 }
 .btn3{
+    position: relative;
     width: 10rem;
     height: 3rem;
+    background: none;
+    border: none;
+   
+    cursor: pointer;
+    transition: all ease-in-out .5s;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+.btn3::before {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 1;
+
+transition: all 0.3s;
+}
+.btn3:hover::before {
+opacity: 0 ;
+transform: scale(0.5,0.5);
+}
+.btn3::after {
+content: '';
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 1;
+opacity: 0;
+transition: all 0.3s;
+border: 1px solid rgb(255, 0, 0);
+transform: scale(1.2,1.2);
+}
+.btn3:hover::after {
+opacity: 1;
+transform: scale(1,1);
 }
