--- a/src/Components/Button4.css
+++ b/src/Components/Button4.css
@@ -4,4 +4,17 @@
 .btn4{
     width: 10rem;
     height: 3rem;
+    position: relative;
+    background: none;
+    border:0;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: 700;
+    transition: all ease-in-out .5s;
+}
+.btn4:hover{
+    color: #CD104D;
+    width: 12rem;
+    letter-spacing: .3rem;
+    background: #fa949460;
 }
